stacks/gcp/central-dashboard-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centraldashboard
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
