stacks/gcp/profiles-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-deployment
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
