stacks/gcp/istio-authorization-config.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: profiles-kfam
  namespace: kubeflow
spec:
  host: profiles-kfam.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
